--- a/css/index.css
+++ b/css/index.css
@@ -13,28 +13,30 @@ header {display: flex; justify-content: space-between; height: 3em; width: 100%;
 header nav {display: flex;}
 header nav ul.gnb {display: flex; color: #fff;}
 header nav ul.gnb >li{padding: 1em 1.5em; text-align: center; position: relative; }
+header nav ul.gnb >li:nth-child(5) {display: none;}
 header nav ul.gnb >li:hover {background-color: #ccc; color: #222; }
 header nav ul.gnb >li >ul.sub{ z-index: 2; background-color: #fff; color: #000; position: absolute; top: 3em; left: 0;}
-header nav ul.gnb >li >ul.sub>li{display: none; font-size: 1em; padding: .7em 3.5em 1em .7em; text-align: left; }
-header nav ul.gnb >li:last-child:hover >ul.sub>li {display: block;}
+header nav ul.gnb >li >ul.sub>li{ font-size: 1em; padding: .7em 3.5em 1em .7em; text-align: left; display: none; }
+header nav ul.gnb >li:last-child:hover >ul.sub {display: block;}
 header nav ul.gnb >li >ul.sub>li:hover {background-color: #ccc; }
 header nav ul.gnb >li > a> i {margin-left: .5em;}
-header .search {font-size: 1.2em; color: #fff; padding: .8em; cursor: pointer;}
+header .search i {font-size: 1.2em; color: #fff; padding: .75em; cursor: pointer; position: absolute; right: 0; top: 0;}
+header .search i.last { cursor: pointer; display: none;}
 
-.slide{ width: 100%;  }
+.slide{ width: 100%; }
 .slide ul {width: 100%; }
 .slide ul li {width: 100%; }
 .slide ul li .txt-wrap{position: absolute; left: 50%; bottom: 1%; color: #fff; text-align: center; transform: translate(-50%,-50%);}
 .slide ul li .txt-wrap h3 {font-size: 1.5em;}
 .slide ul li .txt-wrap p {margin: 1.5em 0 1em 0; font-weight: bold; font-size: .9em;}
 
-.theband-wrapper {width: 100%; height: 100vh; display: flex; }
+.theband-wrapper {width: 100%; display: flex; }
 .theband-wrapper .title-wrap{text-align: center; }
-.theband-wrapper h2.title{padding: .5em 0 .7em 0;  }
+.theband-wrapper h2.title{padding: 3em 0 .5em 0;  }
 .theband-wrapper p{padding: 1.5em 0; line-height: 1.5;}
 .theband-wrapper .img-wrap {text-align: center;}
 .theband-wrapper .img-wrap ul {  display: flex; justify-content: center; align-items: center;}
-.theband-wrapper .img-wrap ul li {flex: 33.3333% 0 0; }
+.theband-wrapper .img-wrap ul li {flex: 33.3333% 0 0; padding-bottom: 5em;}
 .theband-wrapper .img-wrap ul li img{width: 150px; height: auto;}
 
 .tourdate-wrapper { text-align: center; width: 100%; background-color: #000; }
@@ -80,3 +82,19 @@ footer .sns i{color: #666;}
 footer .sns i:hover{color: #ccc;}
 footer p {color: #ccc; margin-bottom: 5em;}
 footer p a {border-bottom: 1px solid #666;}
+
+/***************** 반응형 *******************/
+@media screen and (max-width: 600px) {
+header nav ul.gnb >li:last-child,
+header nav ul.sub,
+header .search i:first-child {display: none;}
+header .search i.last {display: block; z-index: 20; }
+header .search:hover i {background-color: #ccc; color: #222;}
+
+header nav ul.gnb >li:nth-last-child(2) {display: block;}
+header nav {display: block; width: 100%;}
+header nav ul.gnb { display: block; width: 100%;}
+header nav ul.gnb >li:first-child {display: block; width: 20%; z-index: 10; text-align: left; }
+header nav ul.gnb >li:not(:first-child) { z-index: 10; display: none; width: 100%; text-align: left; background-color: #000;}
+header nav ul.gnb >li:hover {background-color: #ccc; color: #222;}
+}
